samples/_failures_safe/1761295632_4215b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_886ecac8.c: In function ‘read_matrix’:
./samples/SAFE/__tmp_886ecac8.c:136:5: error: expected identifier or ‘(’ at end of input
  136 |     int rows,
      |     ^~~
./samples/SAFE/__tmp_886ecac8.c:136:5: error: expected declaration or statement at end of input
